Change background color, add box-shadow, fix img overflowing container's borders

--- a/src/ProjectSection.module.css
+++ b/src/ProjectSection.module.css
@@ -13,5 +13,6 @@
 .projectsGrid {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 100px;
 }
